Kuberentes-exe-3/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/expruc/kubernetes-gradutaion-drill/k8s-final-drill:backend
          ports:
            - containerPort: 3000
